--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -47,12 +47,12 @@
     </section>
   </header>
   <section class="p1-box">
-    <div class="p1-box1" >
+    <div class="p1" >
       <h4>Features</h4>
       <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
         Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </div>
-    <div class="p1-box2">
+    <div class="p1">
       <h4>About</h4>
       <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
         Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -60,19 +60,19 @@
   </section>
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   <section class="p2-box">
-    <div class="p2-box1">
+    <div class="p2">
       <h4>Services</h4>
       <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
         Suspendisse
         eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </div>
-    <div class="p2-box2">
+    <div class="p2">
       <h4>Product</h4>
       <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
         Suspendisse
         eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </div>
-    <div class="p2-box3">
+    <div class="p2">
       <h4>Vision</h4>
       <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
         Suspendisse
