--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -31,6 +31,7 @@
       </section>
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+</header>
 <section class="Services-services">
 <h4>Services</h4>
 
@@ -44,7 +45,7 @@
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a href="" class="learn-more">Learn More</a>
 </div>
 
 <div class="items ux-ui">
@@ -53,7 +54,7 @@ Learn More
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a href="" class="learn-more">Learn More</a>
 </div>
 
 <div class="items digital-marketing">
@@ -62,7 +63,7 @@ Learn More
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a href="" class="learn-more">Learn More</a>
 </div>
 
 <div class="items web-development">
@@ -71,7 +72,7 @@ Learn More
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a href="" class="learn-more">Learn More</a>
 </div>
 
 <div class="items ios-development">
@@ -80,7 +81,7 @@ Learn More
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a href="" class="learn-more">Learn More</a>
 </div>
 <div class="items android-development">
     <h5>Android Development</h5>
@@ -88,24 +89,28 @@ Learn More
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a href="" class="learn-more">Learn More</a>
 </div>
 </section>
-Some Facts About Our Services
+<section class="fact-service">
+  <div class= "fact-text">
+<h4>Some Facts About Our Services</h4>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.</p>
 
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
+<ul>
+<li>Awesome thing</li>
+<li>Amazing thing</li>
+<li>Cool thing</li>
+<li>Great thing</li>
+</ul>
+</div>
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
-
+</section>
+<footer>
+<p>Copyright Great Idea! 2018</p><br><br><br>
+</footer>
 </body>
 
 </html>
